--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,23 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(smoothqr)
-## basic example code
+x <- -999:999 / 1000 * 2 * pi
+y <- sin(x) + rnorm(length(x), sd = .1)
+train_y <- y[x < 4]
+YX <- lagmat(y, c(-30:-1, 0, 5, 10, 15, 20, 25, 30))
+Y <- YX[ ,1:30]
+X <- YX[ ,31:37]
+out <- smooth_rq(X, Y, tau = c(.2, .5, .8), degree = 5L, aheads = 30:1)
+p <- predict(out, newdata = X[max(which(complete.cases(X))), , drop = FALSE])
+plot(x, y, pch = 16, col = "lightgrey")
+curve(sin(x), -2*pi, 2*pi, add = TRUE)
+abline(v = 4)
+pp <- dplyr::bind_rows(lapply(p, as.data.frame), .id = "ahead")
+points(30:1 * dx + 4, ppp$`tau = 0.5`, col = 2)
+
+plot(30:1 * dx, ppp$`tau = 0.5`)
+lines(30:1 * dx, ppp$`tau = 0.2`)
+lines(30:1 * dx, ppp$`tau = 0.8`)
 ```
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
