--- a/README.Rmd
+++ b/README.Rmd
@@ -19,54 +19,39 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/dajmcdon/smoothqr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/dajmcdon/smoothqr/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of smoothqr is to ...
+The goal of smoothqr is to use quantile regression to make smooth 
+multi-horizon forecasts.
 
 ## Installation
 
 You can install the development version of smoothqr from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("dajmcdon/smoothqr")
+# install.packages("remotes")
+remotes::install_github("dajmcdon/smoothqr")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example.
 
 ```{r example}
 library(smoothqr)
-x <- -999:999 / 1000 * 2 * pi
+x <- -99:99 / 100 * 2 * pi
 y <- sin(x) + rnorm(length(x), sd = .1)
-train_y <- y[x < 4]
-YX <- lagmat(y, c(-30:-1, 0, 5, 10, 15, 20, 25, 30))
-Y <- YX[ ,1:30]
-X <- YX[ ,31:37]
-out <- smooth_rq(X, Y, tau = c(.2, .5, .8), degree = 5L, aheads = 30:1)
-p <- predict(out, newdata = X[max(which(complete.cases(X))), , drop = FALSE])
+XY <- lagmat(y[1:(length(y) - 20)], c(-20:20))
+Y <- XY[ ,1:20]
+X <- XY[ ,21:ncol(XY)]
+tt <- smooth_rq(X, Y, c(.2, .5, .8), aheads = 20:1)
+
+pl <- predict(tt, newdata = X[max(which(complete.cases(X))), , drop = FALSE])
+pll <- dplyr::bind_rows(lapply(pl, data.frame), .id = "ahead")
 plot(x, y, pch = 16, col = "lightgrey")
-curve(sin(x), -2*pi, 2*pi, add = TRUE)
-abline(v = 4)
-pp <- dplyr::bind_rows(lapply(p, as.data.frame), .id = "ahead")
-points(30:1 * dx + 4, ppp$`tau = 0.5`, col = 2)
-
-plot(30:1 * dx, ppp$`tau = 0.5`)
-lines(30:1 * dx, ppp$`tau = 0.2`)
-lines(30:1 * dx, ppp$`tau = 0.8`)
+curve(sin(x), from = -2 * pi, to = 2 * pi, add = TRUE)
+abline(v = x[length(y) - 20])
+pll$x <- rev(x[length(y) - 19:0])
+lines(pll$x, pll$tau...0.5, col = 4)
+lines(pll$x, pll$tau...0.2, col = 2, lty = 2)
+lines(pll$x, pll$tau...0.8, col = 2, lty = 2)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE, eval=FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
